--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<modelVersion>4.0.0</modelVersion>
+<parent>
+	<groupId>org.springframework.boot</groupId>
+	<artifactId>spring-boot-starter-parent</artifactId>
+	<version>2.7.1</version>
+	<relativePath/> <!-- lookup parent from repository -->
+</parent>
+<groupId>com.demyapp</groupId>
+<artifactId>demy-app</artifactId>
+<version>0.0.1-SNAPSHOT</version>
+<packaging>war</packaging>
+<name>demy-app</name>
+<description>Demy project</description>
+<properties>
+	<java.version>17</java.version>
+	<frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
+	<node.version>v16.10.0</node.version>
+	<yarn.version>v1.12.1</yarn.version>
+</properties>
+<dependencies>
+	<dependency>
 		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
-	<groupId>com.demyapp</groupId>
-	<artifactId>demy-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>demy-app</name>
-	<description>Demy app code</description>
-	<properties>
-		<java.version>17</java.version>
-	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		<artifactId>spring-boot-starter-web</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-tomcat</artifactId>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+</dependencies>
 
-		<dependency>
+<build>
+	<plugins>
+		<plugin>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-resources-plugin</artifactId>
+			<version>3.1.0</version>
+			<executions>
+				<execution>
+					<id>copy-resources</id>
+					<phase>process-classes</phase>
+					<goals>
+						<goal>copy-resources</goal>
+					</goals>
+					<configuration>
+						<outputDirectory>${basedir}/target/classes/static</outputDirectory>
+						<resources>
+							<resource>
+								<directory>frontend/build</directory>
+							</resource>
+						</resources>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+		<plugin>
+			<groupId>com.github.eirslett</groupId>
+			<artifactId>frontend-maven-plugin</artifactId>
+			<version>${frontend-maven-plugin.version}</version>
+			<configuration>
+				<workingDirectory>frontend</workingDirectory>
+			</configuration>
+			<executions>
+				<execution>
+					<id>install node</id>
+					<goals>
+						<goal>install-node-and-yarn</goal>
+					</goals>
+					<configuration>
+						<nodeVersion>${node.version}</nodeVersion>
+						<yarnVersion>${yarn.version}</yarnVersion>
+					</configuration>
+				</execution>
+				<execution>
+					<id>yarn install</id>
+					<goals>
+						<goal>yarn</goal>
+					</goals>
+					<phase>generate-resources</phase>
+				</execution>
+				<execution>
+					<id>yarn test</id>
+					<goals>
+						<goal>yarn</goal>
+					</goals>
+					<phase>test</phase>
+					<configuration>
+						<arguments>test</arguments>
+						<environmentVariables>
+							<CI>true</CI>
+						</environmentVariables>
+					</configuration>
+				</execution>
+				<execution>
+					<id>yarn build</id>
+					<goals>
+						<goal>yarn</goal>
+					</goals>
+					<phase>compile</phase>
+					<configuration>
+						<arguments>build</arguments>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
+</build>
 
 </project>
