--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 			<artifactId>frontend-maven-plugin</artifactId>
 			<version>${frontend-maven-plugin.version}</version>
 			<configuration>
-				<workingDirectory>frontend</workingDirectory>
+				<workingDirectory>UI</workingDirectory>
 			</configuration>
 			<executions>
 				<execution>
